# parrotcore

./: .env.example  .gitignore  1.26  README.md  pyproject.toml
backend/: __init__.py  manage.py  pyproject.toml  requirements.txt
backend/apps/api/: serializers.py  urls.py  views.py
backend/apps/common/: __init__.py  runpod_service.py  storage.py
backend/apps/tts/: admin.py  apps.py  models.py  selectors.py  services.py  tasks.py
backend/apps/tts/migrations/: 0001_initial.py
backend/apps/voices/: admin.py  apps.py  models.py  selectors.py  services.py  tasks.py  views.py
backend/apps/voices/migrations/: 0001_initial.py  0002_alter_voiceenrollmentjob_status.py  0003_voiceenrollmentjob_current_step_and_more.py
backend/parrotcore/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
backend/scripts/: download_rvc_models.sh  test_runpod_quick.py  test_rvc_training.py
docs/: README.md
frontend/: package-lock.json  package.json  panda.config.ts  tailwind.config.js
frontend/components/: AudioGradient.tsx  AudioVisualizer.tsx  Footer.tsx  Header.tsx  Layout.tsx  StudioCard.tsx
frontend/components/voices/: VoiceReadyBanner.tsx  VoiceTypeSection.tsx
frontend/lib/: api.ts  theme.ts
frontend/lib/services/: auth.ts  covers.ts  index.ts  tts.ts  voices.ts
frontend/lib/types/: api.ts
frontend/lib/utils/: voiceHelpers.ts
frontend/pages/: _app.tsx  about.tsx  demo.tsx  index.tsx
frontend/pages/auth/: signin.tsx  signup.tsx
frontend/pages/covers/: [id].tsx  new.tsx
frontend/pages/tts/: [id].tsx  new.tsx
frontend/pages/voices/: [id].tsx  new.tsx
frontend/styles/: globals.css
infra/docker/: docker-compose.yml
infra/images/api/: Containerfile
infra/images/worker/: Containerfile
tts_engine/: Dockerfile.runpod  Dockerfile.runpod.simple  __init__.py  runpod_handler.py  runpod_handler_simple.py
tts_engine/examples/: playground.ipnyb
tts_engine/models/: __init__.py  base.py  chatterbox_wrapper.py  f5tts_wrapper.py  rvc_trainer.py  rvc_wrapper.py  separator.py
tts_engine/pipeline/: __init__.py  conversion.py  song_cover.py  synthesis.py  voice_enrollment.py
tts_engine/utils/: __init__.py  audio.py
